Updating some styling and spacing issues

--- a/src/components/movie-card/movie-card.scss
+++ b/src/components/movie-card/movie-card.scss
@@ -3,15 +3,22 @@ $text-color: white;
 $background-color: #0d1a26;
 
 #movie-card {
+  height: 600px;
+  margin-bottom: 25px;
+}
+
+#movie-image {
+  max-width: 100%;
+  height: 375px;
 }
 
 #movie-title {
   font-size: 28px;
 }
 
-#movie-description {
-  max-height: 75%;
-  font-size: 16px;
+#movie-genre {
+  font-size: 18px;
+  height: 25px;
 }
 
 #open-button {
@@ -19,7 +26,7 @@ $background-color: #0d1a26;
   background-color: $main-color;
   color: $text-color;
   border: none;
-  margin: 8px;
+  margin-top: 8px;
   padding: 6px;
   border-radius: 20%;
 }
