--- a/src/components/movie-view/movie-view.scss
+++ b/src/components/movie-view/movie-view.scss
@@ -25,7 +25,7 @@ $button-color: white;
   background-color: $main-color;
   color: $button-color;
   border: none;
-  margin: 8px;
+  margin-top: 20px;
   padding: 6px;
   border-radius: 20%;
 }
